# skills

./: .gitignore  LICENSE  README.md  learnings.md  package-lock.json  package.json  pyproject.toml  skills-lock.json  skills-registry.json  skills.sh.json
.agents/skills/backend-type-bridger/: SKILL.md
.agents/skills/dart-type-bridger/: SKILL.md  manifest.json
.agents/skills/design-handoff/: context  reference  scripts
.agents/skills/design-handoff-flutter/: SKILL.md
.agents/skills/engineering-excellence/: SKILL.md
.agents/skills/flutter-engineering/: SKILL.md
.agents/skills/flutter-patterns/: SKILL.md
.agents/skills/heyeddi-design/: SKILL.md  manifest.json
.agents/skills/heyeddi-handoff/: SKILL.md  manifest.json
.agents/skills/heyeddi-intake/: SKILL.md  manifest.json
.agents/skills/heyeddi-orchestrator/: SKILL.md  manifest.json
.agents/skills/heyeddi-pr-respond/: SKILL.md
.agents/skills/heyeddi-pr-review/: SKILL.md
.agents/skills/heyeddi-product/: SKILL.md  manifest.json
.agents/skills/no-duplicate-ui/: SKILL.md
.agents/skills/pr-review-responder/: SKILL.md  context  fixtures  manifest.json  reference  scripts
.agents/skills/pr-submission-review/: SKILL.md  context  reference
.agents/skills/pre-merge-gate/: SKILL.md
.agents/skills/primevue-openprops-architect/: SKILL.md
.agents/skills/product-manager/: reference  scripts
.agents/skills/product-translator/: SKILL.md  context  manifest.json  reference  scripts
.agents/skills/skill-orchestrator/: context  manifest.json  scripts
.agents/skills/ux-flow-auditor/: manifest.json
.agents/skills/verify-build/: SKILL.md  manifest.json
.agents/skills/visual-auditor/: SKILL.md
.cursor-plugin/: marketplace.json
.cursor/rules/: skill-authoring.mdc
.github/workflows/: ci.yml  release.yml
docs/: agent-eval-results.md  agent-evals.md  cloud-agent-integration.md  cross-pillar-workflow.md  design-excellence.md  distribution.md  eval-philosophy.md  eval-quality-gates.md  heyeddi-folder.md  pr-workflows.md  skill-guides.md  skills-roadmap.md  subagent-delegation.md  team-cheat-sheet.md  testing-skills.md  v2-skill-naming.md
evals/: README.md
evals/backends/: __init__.py  cursor.py  local_agent.py  pydantic_run.py  results.py
evals/cases/: backend-type-bridger.yaml  design-handoff-flutter-settings.yaml  design-handoff-only.yaml  engineering-excellence-audit.yaml  flutter-backend-bridger.yaml  flutter-engineering.yaml  full-product-integration.yaml  heyeddi-design-from-scratch.yaml  heyeddi-design-polish-existing.yaml  pr-review-responder.yaml  pr-submission-review.yaml  primevue-openprops-architect.yaml  product-translator-intake.yaml  project-engineering.yaml  skill-orchestrator-suggest.yaml  ux-flow-auditor-init.yaml
evals/lib/: __init__.py  agentic_judge.py  assertions.py  case_loader.py  command_capture.py  fs_utils.py  hard_gates.py  sandbox.py  sandbox_git.py  skill_loader.py  visual_capture.py
evals/projects/api-vue/: PRODUCT.md  package.json
evals/prompts/: backend-type-bridger-users.md  design-handoff-flutter-settings.md  engineering-excellence-audit.md  flutter-backend-bridger.md  flutter-engineering-scaffold.md  heyeddi-intake-intake.md  heyeddi-orchestrator-suggest.md  judge-turn.md  primevue-fix-bad-panel.md  product-translator-intake.md  product-translator-judge.md  project-engineering-scaffold-vue.md  skill-orchestrator-suggest.md  ux-flow-auditor-init.md
evals/runs/2026-07-04T22-58-59Z/skill-orchestrator-suggest/backend/: pyproject.toml
fixtures/sample-vue-app/: DESIGN.md  PRODUCT.md  README.md  openapi.json  package-lock.json  package.json
plugins/heyeddi-skills/: README.md
reference/: handoff-brief.schema.json
scripts/: _lib.sh  add-skill-subtree.sh  apply-eval-vue-scaffold.py  apply-next-skill-section.py  apply-v2-skill-names.py  bootstrap-all-skills.py  bootstrap-skill-aliases.py  clean-eval-runs.py  generate-handoff-mockups.py  install-skills.sh  migrate-skill-names-v2.py  new-skill.sh  pull-skill-subtree.sh  push-skill-subtree.sh  release-gate.sh  run-evals.py  setup-evals.sh  skill-name-aliases.json  skill-security-scan.sh  test-skill.sh  test-skills.py  verify-agent-cli.sh
scripts/cloud/: invoke_skill_tool.py  load_skills.py  register_tools.py
scripts/lib/: quality_gate.py
skills/: README.md
skills/backend-type-bridger/: SKILL.md  manifest.json
skills/composable-patterns/: SKILL.md
skills/dart-type-bridger/: SKILL.md
skills/design-handoff/: SKILL.md  manifest.json
skills/design-handoff-flutter/: SKILL.md  manifest.json
skills/design-system-generalizer/: SKILL.md
skills/engineering-excellence/: SKILL.md
skills/flutter-engineering/: SKILL.md
skills/flutter-patterns/: SKILL.md  manifest.json
skills/heyeddi-design/: SKILL.md
skills/heyeddi-handoff/: SKILL.md
skills/heyeddi-intake/: SKILL.md
skills/heyeddi-orchestrator/: SKILL.md  manifest.json
skills/heyeddi-pr-respond/: SKILL.md  manifest.json
skills/heyeddi-pr-review/: SKILL.md  manifest.json
skills/heyeddi-product/: SKILL.md
skills/no-duplicate-ui/: SKILL.md
skills/pr-review-responder/: SKILL.md  manifest.json
skills/pr-submission-review/: SKILL.md  fixtures  manifest.json  scripts
skills/pre-merge-gate/: SKILL.md  manifest.json
skills/primevue-openprops-architect/: SKILL.md
skills/product-manager/: SKILL.md  context  manifest.json
skills/product-translator/: SKILL.md  manifest.json
skills/project-engineering/: SKILL.md  manifest.json  reference.md
skills/skill-orchestrator/: SKILL.md  manifest.json  reference
skills/ux-flow-auditor/: SKILL.md
skills/verify-build/: SKILL.md
skills/visual-auditor/: SKILL.md  manifest.json
templates/skill/: SKILL.md  manifest.json
tests/: _skill_loader.py  test_auto_sync_security.py  test_contrast_audit.py  test_eval_prompt_paths.py  test_fetch_pr_comments_untrusted.py  test_load_handoff_untrusted.py  test_next_skill.py  test_pr_context_untrusted.py  test_product_untrusted.py  test_skill_aliases.py  test_spec_compliance_fixes.py  test_sync_openapi_local_only.py  test_verify_handoff_card_slots.py
(+862 files in other folders)
